--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
 }
 .loading {
   left: 50%;
-  top: 55%;
+  top: 80%;
   font-size: 36px;
   font-family: serif;
   font-weight: bold;
@@ -55,4 +55,7 @@ code {
 .Main{
   text-align: center;
   padding: 30px 30px;
+}
+.btn-light {
+  margin-top: 30px;
 }
